--- a/RemisYa/src/app/layout/header/header.component.css
+++ b/RemisYa/src/app/layout/header/header.component.css
@@ -1,5 +1,22 @@
 header {
     width: 100%;
     min-height: 625px;
-}
-
+ }
+ 
+ .wave {
+    position: relative;
+    padding-top: 10rem;
+    background: linear-gradient(90deg, rgb(1, 94, 21) 0%, rgb(0, 236, 20) 100%);
+ }
+ 
+ .wave:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 216px;
+    background: url('/RemisYa/src/assets/wave.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+ }
