--- a/RemisYa/src/app/layout/header/header.component.html
+++ b/RemisYa/src/app/layout/header/header.component.html
@@ -8,7 +8,7 @@
                class="bi bi-arrow-right-circle"></i></a>
         </div>
         <div class="col ms-md-5 mt-3 mt-md-0 text-center-xs" style="z-index: 1;">
-           <img class="img-fluid" width="498" src="img/programming.svg">
+           <img class="img-fluid" width="498" src="./assets/autos.jpg">
         </div>
      </div>
   </div>
