--- a/RemisYa/src/app/layout/footer/footer.component.html
+++ b/RemisYa/src/app/layout/footer/footer.component.html
@@ -1,3 +1,49 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="container">
+     <div class="row">
+        <div class="col-md-3">
+           <h4 class="mb-3">Sobre Remis Ya!</h4>
+           <p>
+              Somos un grupo de estudaintes de desarrollo web y aplicaciones digitales del ISPC.
+           </p>
+        </div>
+        <div class="col-md-3">
+           <h4 class="mb-3">Menu</h4>
+           <ul class="list-unstyled">
+            <li><a href="">Inicio</a></li>
+              <li><a href="">Sobre Nosostros</a></li>
+              <li><a href="">Tienda</a></li>
+              <li><a href="">Registrarse</a></li>
+              <li><a href="">Iniciar sesión</a></li>
+              <li><a href="">Contacto</a></li>
+           </ul>
+        </div>
+        <div class="col-md-3">
+           <h4 class="mb-3">Servicios</h4>
+           <ul class="list-unstyled">
+              <li><a href="">Remis al instante</a></li>
+              <li><a href="">Mejores precios</a></li>
+              <li><a href="">Envio seguro de paqueteria</a></li>
+           </ul>
+        </div>
+        <div class="col-md-3">
+           <h4 class="mb-3">Redes Sociales</h4>
+           <div class="social">
+              <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
+           </div>
+           <div class="social">
+              <a href="#" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+           </div>
+           <div class="social">
+              <a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+           </div>
+        </div>
+     </div>
+     <hr>
+     <div class="row">
+        <div class="col-12 text-center my-3">
+           Copyrights© 2022 <a href="#">Remis Ya!</a> - Todos los derechos reservados
+        </div>
+     </div>
+  </div>
+</footer>
