--- a/RemisYa/src/app/layout/header/header.component.html
+++ b/RemisYa/src/app/layout/header/header.component.html
@@ -4,11 +4,11 @@
         <div class="col-md-5 text-white mt-4 ms-md-5 text-center-xs" style="z-index: 1;">
            <h1 class="fw-normal">Remis Ya!</h1>
            <p>La solución a sus problemas de transporte.</p>
-           <a class="btn btn-lg btn-primary" href="#portfolio">Soliciar movil <i
+           <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
                class="bi bi-arrow-right-circle"></i></a>
         </div>
         <div class="col ms-md-5 mt-3 mt-md-0 text-center-xs" style="z-index: 1;">
-           <img class="img-fluid" width="498" src="./assets/autos.jpg">
+           <img background-size="cover" class="img-fluid" width="100vh" src="./assets/autos.jpg">
         </div>
      </div>
   </div>
