--- a/RemisYa/src/app/app.component.html
+++ b/RemisYa/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navbar2></app-navbar2>
 <app-header></app-header>
 <app-sobrenosotros></app-sobrenosotros>
+<app-registrarse></app-registrarse>
+<app-iniciarsesion></app-iniciarsesion>
+<app-contacto></app-contacto>
 <app-footer></app-footer>
