--- a/RemisYa/src/app/pages/contacto/contacto.component.html
+++ b/RemisYa/src/app/pages/contacto/contacto.component.html
@@ -1,1 +1,32 @@
-<p>contacto works!</p>
+<section id="contacto" class="contacto section-bg">
+    <div class=" container ">
+       <div class="section-title ">
+          <h2>Contacto</h2>
+       </div>
+       <div class="row ">
+          <div class="col-md-6 ">
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.1610557193058!2d-76.99744718578688!3d-12.101124546207421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c7c3844d1a9f%3A0x1ebeb72da87566a!2sJir%C3%B3n%20Mois%C3%A9s%20Mendelssohn%20283%2C%20Cercado%20de%20Lima%2015037!5e0!3m2!1ses!2spe!4v1616028659519!5m2!1ses!2spe "
+                width="600 " height="350 " style="border:0; " allowfullscreen=" " loading="lazy "></iframe>
+          </div>
+          <div class="col-md-6 mt-3 mt-md-0 ">
+             <div class="mb-3 ">
+                <label for="exampleFormControlInput1 " class="form-label ">Nombre</label>
+                <input type="text " class="form-control " id="exampleFormControlInput1 " placeholder="tu nombre ">
+             </div>
+             <div class="mb-3 ">
+                <label for="exampleFormControlInput1 " class="form-label ">Correo electronico</label>
+                <input type="email " class="form-control " id="exampleFormControlInput1 " placeholder="name@example.com ">
+             </div>
+             <div class="mb-3 ">
+                <label for="exampleFormControlTextarea1 " class="form-label ">comentario</label>
+                <textarea class="form-control " id="exampleFormControlTextarea1 " rows="3 "></textarea>
+             </div>
+             <div class="d-grid ">
+                <button class="btn btn-primary " type="button ">Enviar</button>
+             </div>
+          </div>
+       </div>
+    </div>
+    <br>
+    <br>
+ </section>
