--- a/RemisYa/src/app/layout/footer/footer.component.css
+++ b/RemisYa/src/app/layout/footer/footer.component.css
@@ -1,4 +1,5 @@
 footer {
+   background: linear-gradient(90deg, rgb(1, 94, 21) 0%, rgb(0, 236, 20) 100%);
     border-top: 1px solid #7e7e7e;
     padding-top: 44px;
  }
