--- a/RemisYa/src/app/layout/header/header.component.html
+++ b/RemisYa/src/app/layout/header/header.component.html
@@ -4,12 +4,70 @@
         <div class="col-md-5 text-white mt-4 ms-md-5 text-center-xs" style="z-index: 1;">
            <h1 class="fw-normal">Remis Ya!</h1>
            <p>La solución a sus problemas de transporte.</p>
-           <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
-               class="bi bi-arrow-right-circle"></i></a>
+           <br>
+           <p>Es una herramienta para viajar mucho más simple y sin esperas. Además contamos con servicios de cadetería y viajes dentro de la ciudad, viajes fuera del ejido municipal, transporte escolar y abonos mensuales para tu comodidad.</p>
+ <!--          <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
+               class="bi bi-arrow-right-circle"></i></a> -->
         </div>
         <div class="col ms-md-5 mt-3 mt-md-0 text-center-xs" style="z-index: 1;">
-           <img background-size="cover" class="img-fluid" width="100vh" src="./assets/autos.jpg">
+           <img width="100%" height="100%" class="img-fluid"  src="./assets/autos.jpg">
+
+           <div class="overlay" id="overlay">
+            <div class="popup" id="popup">
+                <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
+                <br>
+                <h3>Pedí tu coche ahora</h3>
+                <h4>Te llegará una notificación indicando quién es el chofer y la ubicación exacta.</h4>
+                <form action="#" class="needs-validation" novalidate>
+                    <div class="contenedor-inputs">
+                        <div class="">
+                            <label for="validationCustom01"> </label>
+                            <input type="text" class="form-control" id="validationCustom01" placeholder="Nombre y Apellido" required>
+                            <div class="valid-feedback">
+                              Válido!
+                            </div>
+                          </div>
+                          <div class="">
+                            <label for="validationCustom02"> </label>
+                            <input type="text" class="form-control" id="validationCustom02" placeholder="Lugar de origen" required>
+                            <div class="valid-feedback">
+                              Válido!
+                            </div>
+                          </div>
+                          <div class="">
+                            <label for="validationCustom03"></label>
+                            <input type="text" class="form-control" id="validationCustom03" placeholder="Lugar de destino" required>
+                            <div class="valid-feedback">
+                              Válido!
+                            </div>
+                          </div>
+                          <div class="">
+                            <label for="validationCustom04"> </label>
+                            <input type="text" class="form-control" id="validationCustom04" placeholder="Teléfono" required>
+                            <div class="valid-feedback">
+                              Válido!
+                            </div>
+                          </div>
+                    </div>
+                   <br>
+                    <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
+                      class="bi bi-arrow-right-circle"></i></a>
+                    <br>
+                    <p>-</p>
+                  <!--  <button onclick="alertar('Su coche ya está en camino');">
+                        Pedir coche
+                      </button>   -->
+                      <script type="text/javascript">
+                          function alertar(texto) {
+                             alert(texto);
+                          }
+                      </script>
+                </form>
+            </div>
         </div>
+
+
+          </div>
      </div>
   </div>
-</header>
+</header> 
