--- a/RemisYa/src/app/app.component.html
+++ b/RemisYa/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar2></app-navbar2>
+<app-navbar></app-navbar>
 <app-header></app-header>
 <app-sobrenosotros></app-sobrenosotros>
 <app-registrarse></app-registrarse>
