--- a/RemisYa/src/app/layout/navbar/navbar.component.html
+++ b/RemisYa/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,7 @@
+
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-     <a class="navbar-brand text-white fs-3" href="#">TutosCoders</a>
+     <a class="navbar-brand text-white fs-3" href="#">Remis Ya!</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-list"></i>
     </button>
@@ -10,19 +11,176 @@
               <a class="nav-link" aria-current="page" href="#inicio">Inicio</a>
            </li>
            <li class="nav-item">
-              <a class="nav-link" href="#about">Sobre Nosotros</a>
+              <a class="nav-link" href="#services">Sobre Nosotros</a>
            </li>
            <li class="nav-item">
               <a class="nav-link" href="#services">Tienda</a>
            </li>
            <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Registrarse</a>
+              <a class="nav-link" href="#el-fomulario-de-registro">Registrarse</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Iniciar sesión</a>
+            <a class="nav-link" href="#iniciars">Iniciar sesión</a>
          </li>
-        </ul>
-        <a class="btn-custom ms-lg-4" href="#contacto">Contacto</a>
-     </div>
+         <li>
+            <a class="nav-link" href="#contacto">Contacto</a>
+         </li>
+      </ul>
+ <!--    </div>
+                <li class="nav-item dropdown" >
+             <a class="img-user" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown"
+               aria-expanded="false">
+               <img src="/RemisYa/src/assets/wave.png" class="user user-chip-md bg-default" alt="user-image">
+             </a>
+             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+               <div class="row p-2 d-flex align-items-center" style="width: 20rem;">
+                 <div class="col-md-3 col-sm-3 col-3">
+                   <img src="/RemisYa/src/assets/logoremis.png" class="user user-chip-xxlg bg-default"
+                     alt="user-image">
+                 </div>
+                 <div class="col-md-9 col-sm-9 col-9">
+                   <div class="py-3 ps-3">
+                     <div>
+                       <h6 class="text-dark p-0 m-0 text-capitalize"><strong>Alonso Nava</strong></h6>
+                     </div>
+                     <div>
+                       <small class="text-dark text-capitalize">Software developer</small>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+               <ul class="list-group list-group-flush">
+                 <li class="list-group-item-user icon-center">
+                   <i class="bi bi-person-circle fs-5 text-primary"></i> <span class="ms-4">My Profile</span>
+                 </li>
+                 <li class="list-group-item-user icon-center">
+                   <i class="bi bi-bag-heart-fill fs-5 text-info"></i> <span class="ms-4">Subscriptions</span>
+                 </li>
+                 <li class="list-group-item-user icon-center" >
+                   <i class="bi bi-box-arrow-right fs-5 text-danger"></i> <span class="ms-4">Sign out</span>
+                 </li>
+               </ul>
+             </div>
+           </li>
   </div>
 </nav>
+-->
+<!--
+<nav id="navbar" class="navbar navbar-expand-lg mb-0 px-2 bg-app">
+   <div class="container">
+     <!-- Start >> Navbar items 
+     <ul class="navbar-nav">
+ 
+       <li class="nav-item icon-center"> -->
+         <!-- Logo App -->
+ 
+         <!-- IMG -->
+         <!-- <img class="user user-chip-md mr-2" src="" alt="you logo" /> -->
+ 
+         <!-- SVG 
+         <svg class="svgColor user user-chip-md mr-2" xmlns="" viewBox="0 0 85 96">
+           <g id="Capa_2" data-name="Capa 2">
+             <g id="Layer_1" data-name="Layer 1">
+               <rect class="cls-1" x="38.66" y="60.86" width="2.08" height="3.84" rx="0.29" />
+               <rect class="cls-1" x="44.72" y="60.86" width="2.08" height="3.84" rx="0.29" />
+               <rect class="cls-1" x="29.06" y="44.15" width="5.5" height="5.49" rx="1.48" />
+               <path class="cls-1"
+                 d="M81.8,21.6,45.66.85a6.47,6.47,0,0,0-6.4,0L3.18,21.73A6.37,6.37,0,0,0,0,27.26V68.87a6.43,6.43,0,0,0,3.27,5.54L39.41,95.14a6.37,6.37,0,0,0,6.4,0L81.89,74.28A6.42,6.42,0,0,0,85,68.73V27.12A6.37,6.37,0,0,0,81.8,21.6ZM66.18,39v9.46a2,2,0,0,1-1,1.8c-3.36,2.35-6.66,4.77-9.95,7.08a1.67,1.67,0,0,0-.77,2.08c.85,3.44,1.59,6.89,2.46,10.33a2.41,2.41,0,0,1-.33,2c-1.64,2.58-3.23,5.18-4.82,7.8-.37.59-.46.8-1,.8-1.36,0-4.91,0-8.28,0,0,0-6.92,0-8.28,0-.57,0-.66-.21-1-.8-1.59-2.62-3.18-5.22-4.82-7.8a2.41,2.41,0,0,1-.33-2c.87-3.44,1.61-6.89,2.46-10.33a1.67,1.67,0,0,0-.77-2.08c-3.29-2.31-6.59-4.73-9.95-7.08a2,2,0,0,1-1-1.8V39a1.7,1.7,0,0,1,.84-1.59q5.3-3.53,10.51-7.15a1.32,1.32,0,0,1,1.47-.2s8.22,2.91,10.4,3.48a2.07,2.07,0,0,0,.46,0h0a2.07,2.07,0,0,0,.46,0c2.18-.57,10.4-3.48,10.4-3.48a1.32,1.32,0,0,1,1.47.2q5.22,3.61,10.51,7.15A1.7,1.7,0,0,1,66.18,39Z" />
+               <rect class="cls-1" x="51.17" y="44.15" width="5.5" height="5.49" rx="1.48" />
+             </g>
+           </g>
+         </svg> -->
+ 
+         <!-- Title app 
+         <h5 class="p-0 m-0 ms-2 fw-bold">Remis Ya!</h5>
+ 
+       </li>
+     </ul>
+     <div class="ms-auto">
+       <ul class="navbar-nav">
+         <ul class="navbar-nav">
+ 
+           <li class="nav-item d-none d-lg-block">
+             <a class="nav-link active mx-3" aria-current="page" href="#">Home</a>
+           </li>
+ 
+           <li class="nav-item d-none d-lg-block">
+             <a class="nav-link mx-3" href="#">Product</a>
+           </li>
+ 
+           <li class="nav-item dropdown d-none d-lg-block">
+             <a class="nav-link dropdown-toggle mx-3" href="#" id="navbarDropdownMenuLink" role="button"
+               data-bs-toggle="dropdown" aria-expanded="false">
+               Documentation
+             </a>
+             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+               <div class="px-2">
+                 <h5 class="dropdown-header fw-bold">Get started</h5>
+                 <a class="dropdown-item" href="javascript:void(0);">Installation</a>
+                 <a class="dropdown-item" href="javascript:void(0);">Plugins</a>
+                 <a class="dropdown-item" href="javascript:void(0);">Code samples</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="javascript:void(0);">
+                   <span><i class="bi bi-credit-card-2-back-fill text-primary"></i></span>
+                   <span class="ms-2">Set up payments</span>
+                 </a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="javascript:void(0);">
+                   <span><i class="bi bi-gear-fill text-info"></i></span>
+                   <span class="ms-2">Full API Reference </span>
+                 </a>
+               </div>
+             </div>
+           </li>
+ 
+           <li class="nav-item d-none d-lg-block">
+             <a class="nav-link mx-3" href="#">Contact</a>
+           </li> -->
+ 
+           <!-- Registred 
+           <li class="nav-item dropdown" >
+             <a class="img-user" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown"
+               aria-expanded="false">
+               <img src="./assets/images/avatars/avatar-01.svg" class="user user-chip-md bg-default" alt="user-image">
+             </a>
+             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+               <div class="row p-2 d-flex align-items-center" style="width: 20rem;">
+                 <div class="col-md-3 col-sm-3 col-3">
+                   <img src="./assets/images/avatars/avatar-01.svg" class="user user-chip-xxlg bg-default"
+                     alt="user-image">
+                 </div>
+                 <div class="col-md-9 col-sm-9 col-9">
+                   <div class="py-3 ps-3">
+                     <div>
+                       <h6 class="text-dark p-0 m-0 text-capitalize"><strong>Alonso Nava</strong></h6>
+                     </div>
+                     <div>
+                       <small class="text-dark text-capitalize">Software developer</small>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+               <ul class="list-group list-group-flush">
+                 <li class="list-group-item-user icon-center">
+                   <i class="bi bi-person-circle fs-5 text-primary"></i> <span class="ms-4">My Profile</span>
+                 </li>
+                 <li class="list-group-item-user icon-center">
+                   <i class="bi bi-bag-heart-fill fs-5 text-info"></i> <span class="ms-4">Subscriptions</span>
+                 </li>
+                 <li class="list-group-item-user icon-center" >
+                   <i class="bi bi-box-arrow-right fs-5 text-danger"></i> <span class="ms-4">Sign out</span>
+                 </li>
+               </ul>
+             </div>
+           </li> -->
+ 
+           <!-- Not registred 
+           <button type="button" class="btn btn-login btn-outline-primary">Log in</button>
+ 
+         </ul>
+       </ul>
+     </div>
+     <!-- End >> Navbar items 
+   </div>
+ </nav>
+ <!-- End >> Navbar -->
