--- a/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
+++ b/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id= "iniciars" class="container">
     <h2>Ingresa tu usuario y clave</h2>
     <form action="validar.php" method="post" class="needs-validation" novalidate>
       <div class="form-group">
