--- a/RemisYa/src/app/layout/navbar/navbar.component.css
+++ b/RemisYa/src/app/layout/navbar/navbar.component.css
@@ -1,5 +1,6 @@
+
 .navbar .nav-link {
-   background: linear-gradient(90deg, rgb(1, 94, 21) 0%, rgb(0, 236, 20) 100%);
+   background: linear-gradient(90deg, rgb(1, 94, 21) 0%, rgb(0, 12, 1) 100%);
     color: white;
     margin-right: 29px;
     transition: 0.2s;
@@ -59,3 +60,103 @@ iframe {
        width: 366px;
     }
  }
+
+ /*
+
+.icon-services {
+   display: inline-flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.flex-container {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: nowrap;
+   justify-content: flex-start;
+   align-items: center;
+   align-content: normal;
+}
+
+.flex-items:nth-child(1) {
+   display: block;
+   flex-grow: 0;
+   flex-shrink: 1;
+   flex-basis: auto;
+   align-self: auto;
+   order: 0;
+}
+
+.flex-items:nth-child(2) {
+   display: block;
+   flex-grow: 0;
+   flex-shrink: 1;
+   flex-basis: auto;
+   align-self: auto;
+   order: 0;
+}
+
+.gradient {
+   background-image: linear-gradient(135deg, var(--color-primary) 0%, var(--color-secondary) 100%);
+   border: none !important;
+}
+
+.img-customer {
+   height: 15rem;
+   width: 100%;
+}
+
+.star-pulse {
+   animation: star-pulse 2s ease 0s infinite normal forwards;
+}
+
+@keyframes star-pulse {
+   0% {
+       transform: scale(1);
+   }
+
+   35% {
+       transform: scale(1.1);
+   }
+
+   70% {
+       transform: scale(1);
+   }
+}
+
+.star-pulse-2 {
+   animation: star-pulse-2 2s ease 0s infinite normal forwards;
+}
+
+@keyframes star-pulse-2 {
+   20% {
+       transform: scale(1);
+   }
+
+   55% {
+       transform: scale(1.1);
+   }
+
+   90% {
+       transform: scale(1);
+   }
+}
+
+.star-pulse-3 {
+   animation: star-pulse-3 2s ease 0s infinite normal forwards;
+}
+
+@keyframes star-pulse-3 {
+   30% {
+       transform: scale(1);
+   }
+
+   65% {
+       transform: scale(1.1);
+   }
+
+   100% {
+       transform: scale(1);
+   }
+}
+*/
