--- a/RemisYa/src/app/app.component.html
+++ b/RemisYa/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
 <app-sobrenosotros></app-sobrenosotros>
+<app-tienda></app-tienda>
 <app-registrarse></app-registrarse>
 <app-iniciarsesion></app-iniciarsesion>
 <app-contacto></app-contacto>
