--- a/RemisYa/src/app/layout/navbar/navbar.component.html
+++ b/RemisYa/src/app/layout/navbar/navbar.component.html
@@ -14,7 +14,7 @@
               <a class="nav-link" href="#services">Sobre Nosotros</a>
            </li>
            <li class="nav-item">
-              <a class="nav-link" href="#services">Tienda</a>
+              <a class="nav-link" href="#tiendada">Tienda</a>
            </li>
            <li class="nav-item">
               <a class="nav-link" href="#el-fomulario-de-registro">Registrarse</a>
