--- a/RemisYa/src/app/layout/navbar/navbar.component.html
+++ b/RemisYa/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
+    <img href="../../../assets/logoremis.png">
      <a class="navbar-brand text-white fs-3" href="#">Remis Ya!</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-list"></i>
