--- a/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
+++ b/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
@@ -1,3 +1,26 @@
+<link href='https://fonts.googleapis.com/css?family=Ubuntu:500' rel='stylesheet' type='text/css'>
+
+<div  id= "iniciars" class="login">
+  <div class="login-header">
+    <h1>Login</h1>
+  </div>
+  <div class="login-form">
+    <h3>Username:</h3>
+    <input type="text" placeholder="Username"/><br>
+    <h3>Contraseña:</h3>
+    <input type="password" placeholder="Password"/>
+    <br>
+    <input type="button" value="Login" class="login-button btn-primary"/>
+    <br>
+    <a class="sign-up">Acceder!</a>
+  </div>
+</div>
+<div class="error-page">
+  <div class="try-again">Error: ¿Intentar de nuevo?</div>
+</div>
+
+
+<!--
 <div id= "iniciars" class="container">
     <h2>Ingresa tu usuario y clave</h2>
     <form action="validar.php" method="post" class="needs-validation" novalidate>
@@ -20,4 +43,4 @@
     <br>
 
   </div>
-
+-->
