--- a/RemisYa/src/app/pages/registrarse/registrarse.component.html
+++ b/RemisYa/src/app/pages/registrarse/registrarse.component.html
@@ -1,3 +1,29 @@
+<link href='https://fonts.googleapis.com/css?family=Ubuntu:500' rel='stylesheet' type='text/css'>
+
+<div id="el-fomulario-de-registro" class="Registro">
+ <!-- <div class="login-header">
+    <h2 style="color:#000000">Registrarse</h2>
+  </div> -->
+  <div class="login-form">
+    <h2 style="color:#000000">Registrarse</h2>
+		<h3>Nombre:</h3>
+		<input type="text" placeholder="Nombre"/><br>
+    <h3>Apellido:</h3>
+    <input type="text" placeholder="Apellido"/><br>
+		<h3>Username:</h3>
+		<input type="text" placeholder="Username"/><br>
+		<h3>Correo electronico:</h3>
+		<input type="text" placeholder="Email"/><br>
+    <h3>Contraseña:</h3>
+    <input type="password" placeholder="Password"/>
+    <br> 
+    <br>
+    <input type="button" value="Registro" class="register-button btn-primary"/>
+    <h6 class="no-access">Se encuentra a un paso de ser miembro de Remis Ya!</h6>
+  </div>
+</div>
+
+<!--
 <div id="el-fomulario-de-registro" class="container">
     <h2>Completa el formulario de registro y disfruta de nuestros servicios</h2>
     <br>
@@ -80,7 +106,8 @@
               Por favor ingrese su dirección de calle
             </div>
           </div>
-      <!--  </div> -->
+        -->
+      <!--  </div>
         <div class="form-group">
           <div style="position: center;" class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
@@ -92,11 +119,11 @@
             </div>
           </div>
         </div>
-       <!-- <center> -->
+        <center> 
         <button class="btn btn-primary" type="submit">Enviar registro</button>
       <br>
       <br>
-        <!-- </center> -->
+        </center> -->
     <!--  </form>  
       
       <script>
