--- a/RemisYa/src/app/layout/navbar/navbar.component.css
+++ b/RemisYa/src/app/layout/navbar/navbar.component.css
@@ -60,8 +60,8 @@ iframe {
        width: 366px;
     }
  }
+/**/
 
- /*
 
 .icon-services {
    display: inline-flex;
@@ -159,4 +159,3 @@ iframe {
        transform: scale(1);
    }
 }
-*/
