--- a/RemisYa/src/app/layout/navbar/navbar.component.html
+++ b/RemisYa/src/app/layout/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <img href="../../../assets/logoremis.png">
-     <a class="navbar-brand text-white fs-3" href="#">Remis Ya!</a>
+    <img src="../../../assets/logoremis.png" class="user user-chip-xxlg bg-default"
+    alt="user-image"  width="25" height="25">
+     <a class="navbar-brand text-white fs-3" href="#">--> Remis Ya!</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-list"></i>
     </button>
@@ -27,6 +28,8 @@
             <a class="nav-link" href="#contacto">Contacto</a>
          </li>
       </ul>
+    </div>
+
  <!--    </div>
                 <li class="nav-item dropdown" >
              <a class="img-user" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown"
@@ -68,7 +71,7 @@
 -->
 <!--
 <nav id="navbar" class="navbar navbar-expand-lg mb-0 px-2 bg-app">
-   <div class="container">
+   <div class="container"> -->
      <!-- Start >> Navbar items 
      <ul class="navbar-nav">
  
@@ -180,8 +183,8 @@
  
          </ul>
        </ul>
-     </div>
-     <!-- End >> Navbar items 
-   </div>
- </nav>
+     </div> -->
+     <!-- End >> Navbar items -->
+    <!--  </div>
+ </nav> -->
  <!-- End >> Navbar -->
