--- a/RemisYa/src/app/pages/registrarse/registrarse.component.html
+++ b/RemisYa/src/app/pages/registrarse/registrarse.component.html
@@ -4,147 +4,67 @@
  <!-- <div class="login-header">
     <h2 style="color:#000000">Registrarse</h2>
   </div> -->
-  <div class="login-form">
+
+
+<!--
+  <form (ngSubmit) = "formSubmit()">
+    <div class="login-form">
     <h2 style="color:#000000">Registrarse</h2>
 		<h3>Nombre:</h3>
-		<input type="text" placeholder="Nombre"/><br>
+		<input required [(ngModel)] = "user.nombre" name = "nombre" matInput placeholder="Digite su nombre"><br>
     <h3>Apellido:</h3>
-    <input type="text" placeholder="Apellido"/><br>
+    <input required [(ngModel)] = "user.apellido" name = "apellido" matInput placeholder="Digite su apellido"><br>
 		<h3>Username:</h3>
-		<input type="text" placeholder="Username"/><br>
+		<input required [(ngModel)] = "user.username" name = "username" matInput placeholder="Digite su nombre de usuario"><br>
 		<h3>Correo electronico:</h3>
-		<input type="text" placeholder="Email"/><br>
+		<input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Digite su email"><br>
     <h3>Contraseña:</h3>
-    <input type="password" placeholder="Password"/>
+    <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Digite su contraseña"><br>
+    <h3>Telefono:</h3>
+		<input required [(ngModel)] = "user.telefono" name = "telefono" matInput placeholder="Digite su telefono">
     <br> 
     <br>
     <input type="button" value="Registro" class="register-button btn-primary"/>
     <h6 class="no-access">Se encuentra a un paso de ser miembro de Remis Ya!</h6>
-  </div>
-</div>
-
-<!--
-<div id="el-fomulario-de-registro" class="container">
-    <h2>Completa el formulario de registro y disfruta de nuestros servicios</h2>
-    <br>
-    <form action="action_page.php" method="post" class="needs-validation" novalidate>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom01">Nombre</label>
-            <input type="text" name="nombre" class="form-control" id="nombre" placeholder="Ingrese su nombre" required minlength="2" maxlength="15">
-            <div class="invalid-feedback">
-              Por favor ingrese  mas de 2 caracteres.
-            </div>
-            <div class="valid-feedback">
-              Válido!
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom02">Apellido</label>
-            <input type="text" name="apellido" class="form-control" id="apellido" placeholder="Ingrese su apellido" required minlength="2" maxlength="15">
-            <div class="invalid-feedback">
-              Por favor ingrese  mas de 2 caracteres.
-            </div>
-            <div class="valid-feedback">
-              Válido!
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="validationCustom02">Teléfono</label>
-            <input type="text" name="telefono" class="form-control" id="telefono" placeholder="Ingrese su teléfono sin espacios" required>
-            <div class="valid-feedback">
-              Válido!
-            </div>
-          </div>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom03">DNI</label>
-            <input type="text" name="dni" class="form-control" id="dni" placeholder="Ingrese su DNI sin espacios" required minlength="8" max="12">
-            <div class="invalid-feedback">
-              Por favor ingrese su DNI.
-            </div>
-          </div>
-        
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <label for="fechaNac">Introduzca su fecha de nacimiento:</label>
-             <br>
-             <input id="fechaNac" type="date" name="edad" id="edad" >
-             <br>
-             <label for="edad">Su edad es: </label>
-            <input id="edad" type="text" size="30">
-            <br>
-          <p id="salida">
-         
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom04">Barrio</label>
-            <select class="custom-select" name="barrio" id="barrio" placeholder="Ingrese su barrio" required>
-              <option selected disabled value="">Elige...</option>
-              <option selected disabled value="">Elige...</option>
-              <option>1	Zona Central (CPC Mercado de la Ciudad)</option>
-              <option>2	Zona Norte (CPC Centro América)</option>
-              <option>3	Zona Nordeste (CPC Rancagua)</option>
-              <option>4	Zona Este (CPC Pueyrredón)</option>
-              <option>5	Zona Sudeste (CPC Empalme)</option>
-              <option>6	Zona Sur (CPC Villa El Libertador)</option>
-              <option>7	Zona Sudoeste (CPC Ruta 20)</option>
-              <option>8	Zona Oeste (CPC Colón)</option>
-              <option>9	Zona Noroeste (CPC Monseñor Pablo Cabrera)</option>
-              <option>10 Zona Cerro / Argüello (CPC Argüello)</option>
-              <option>11 Zona Guiñazú (CPC Guiñazú)</option>
-              <option>12 Otro - Especificar en "Dirección" porfavor</option>
-            </select>
-            <div class="invalid-feedback">
-              Selecciona una opción
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom05">Dirección</label>
-            <input type="text" class="form-control" name="direccion" id="direccion" placeholder="Ingrese su dirección de calle" required minlength="2" maxlength="35">
-            <div class="invalid-feedback">
-              Por favor ingrese su dirección de calle
-            </div>
-          </div>
-        -->
-      <!--  </div>
-        <div class="form-group">
-          <div style="position: center;" class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-            <label class="form-check-label" for="invalidCheck">
-              Acepto términos y condiciones
-            </label>
-            <div class="invalid-feedback">
-              Deberías aceptar antes de continuar
-            </div>
-          </div>
-        </div>
-        <center> 
-        <button class="btn btn-primary" type="submit">Enviar registro</button>
-      <br>
-      <br>
-        </center> -->
-    <!--  </form>  
-      
-      <script>
-    
-      (function() {
-        'use strict';
-        window.addEventListener('load', function() {
-    
-          var forms = document.getElementsByClassName('needs-validation');
-    
-          var validation = Array.prototype.filter.call(forms, function(form) {
-            form.addEventListener('submit', function(event) {
-              if (form.checkValidity() === false) {
-                event.preventDefault();
-                event.stopPropagation();
-              }
-              form.classList.add('was-validated');
-            }, false);
-          });
-        }, false);
-      })();
-      </script>
-      <br>
   </div> -->
+
+
+
+
+<form (ngSubmit) = "formSubmit()">
+ <!-- <mat-form-field class="full-width"  appearance = "outline">
+    <mat-label>Nombre de usuario</mat-label>
+    <input required [(ngModel)] = "username" name = "username" matInput placeholder="Digite su nombre de usuario">
+    <mat-hint>El nombre de usuario debe ser único</mat-hint>
+  </mat-form-field>
+
+ <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+    <mat-label>Contraseña</mat-label>
+    <input required [(ngModel)] = "password" name = "password" type = "password" matInput placeholder="Digite su contraseña">
+  </mat-form-field>
+
+ <!-- <mat-form-field class="full-width"  appearance = "outline"> -->
+    <mat-label>Nombre</mat-label>
+    <input required [(ngModel)] = "nombre" name = "nombre" matInput placeholder="Digite su nombre">
+  </mat-form-field>
+
+ <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+    <mat-label>Apellido</mat-label>
+    <input required [(ngModel)] = "apellido" name = "apellido" matInput placeholder="Digite su apellido">
+  </mat-form-field>
+
+ <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+    <mat-label>Email</mat-label>
+    <input required [(ngModel)] = "email" name = "email" type="email" matInput placeholder="Digite su email">
+  </mat-form-field>
+
+ <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+    <mat-label>Telefono</mat-label>
+    <input required [(ngModel)] = "telefono" name = "telefono" matInput placeholder="Digite su telefono">
+  </mat-form-field>
+
+  <div class = "container text-center">
+    <button mat-raised-button color="primary">Registrar</button>
+    <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
+  </div>
+</form> 
