--- a/RemisYa/src/app/pages/registrarse/registrarse.component.html
+++ b/RemisYa/src/app/pages/registrarse/registrarse.component.html
@@ -1,64 +1,84 @@
 <link href='https://fonts.googleapis.com/css?family=Ubuntu:500' rel='stylesheet' type='text/css'>
 
 <div id="el-fomulario-de-registro" class="Registro">
- <!-- <div class="login-header">
+ 
+ 
+ <!--<div class="login-header">
     <h2 style="color:#000000">Registrarse</h2>
   </div> -->
 
 
-<!--
-  <form (ngSubmit) = "formSubmit()">
+
+  <!--<form (ngSubmit) = "formSubmit()">-->
     <div class="login-form">
     <h2 style="color:#000000">Registrarse</h2>
 		<h3>Nombre:</h3>
-		<input required [(ngModel)] = "user.nombre" name = "nombre" matInput placeholder="Digite su nombre"><br>
+		<input type="text" formControlName="nombre" class="form-control" placeholder="Nombre"/><br>
     <h3>Apellido:</h3>
-    <input required [(ngModel)] = "user.apellido" name = "apellido" matInput placeholder="Digite su apellido"><br>
-		<h3>Username:</h3>
-		<input required [(ngModel)] = "user.username" name = "username" matInput placeholder="Digite su nombre de usuario"><br>
+    <input type="text" formControlName="apellido" class="form-control" placeholder="Apellido"/><br>
+		<h3>Fecha de nacimiento:</h3>
+    <div>
+      <label for="matInput">Fecha de Nacimiento</label>
+      <div>
+          <input type="date" class="form-control" formControlName="fechaNac">
+      </div>
+  </div>
+  <div>
+  <span class="form-text text-danger"
+  *ngIf="campoEsValido('fechaNac')">
+     Debe seleccionar una fecha de nacimiento valida
+  </span>
 		<h3>Correo electronico:</h3>
-		<input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Digite su email"><br>
+		<input type="text" formControlName="email" class="form-control" placeholder="Email"/><br>
     <h3>Contraseña:</h3>
-    <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Digite su contraseña"><br>
-    <h3>Telefono:</h3>
-		<input required [(ngModel)] = "user.telefono" name = "telefono" matInput placeholder="Digite su telefono">
-    <br> 
+    <input type="password" formControlName="contraseña" class="form-control" placeholder="Password"/><br> 
+    <span class="form-text text-danger"
+    *ngIf="campoEsValido('contraseña')">
+        El mínimo de carácteres para una contraseña es 8.
+   </span>
+    <h3>Ingrese nuevamente contraseña:</h3>
+	  <input type="password" formControlName="contraseñarep" class="form-control" placeholder="Password"/>
+    <div class="form-text text-danger" *ngIf="repitaPassword()">
+      <div >Las contraseñas deben coincidir</div>
+  </div>
+  <br> 
     <br>
     <input type="button" value="Registro" class="register-button btn-primary"/>
     <h6 class="no-access">Se encuentra a un paso de ser miembro de Remis Ya!</h6>
-  </div> -->
+  </div> 
 
 
 
-
+<!-- 
 <form (ngSubmit) = "formSubmit()">
- <!-- <mat-form-field class="full-width"  appearance = "outline">
+ <mat-form-field class="full-width"  appearance = "outline">
     <mat-label>Nombre de usuario</mat-label>
     <input required [(ngModel)] = "username" name = "username" matInput placeholder="Digite su nombre de usuario">
     <mat-hint>El nombre de usuario debe ser único</mat-hint>
-  </mat-form-field>
+  </mat-form-field> 
 
- <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+
+  <mat-form-field class="full-width"  appearance = "outline">
     <mat-label>Contraseña</mat-label>
     <input required [(ngModel)] = "password" name = "password" type = "password" matInput placeholder="Digite su contraseña">
   </mat-form-field>
 
- <!-- <mat-form-field class="full-width"  appearance = "outline"> -->
+ <mat-form-field class="full-width"  appearance = "outline"> 
     <mat-label>Nombre</mat-label>
     <input required [(ngModel)] = "nombre" name = "nombre" matInput placeholder="Digite su nombre">
   </mat-form-field>
 
- <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+ <mat-form-field class="full-width"  appearance = "outline">
     <mat-label>Apellido</mat-label>
     <input required [(ngModel)] = "apellido" name = "apellido" matInput placeholder="Digite su apellido">
   </mat-form-field>
 
- <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+ <mat-form-field class="full-width"  appearance = "outline">
     <mat-label>Email</mat-label>
     <input required [(ngModel)] = "email" name = "email" type="email" matInput placeholder="Digite su email">
   </mat-form-field>
 
- <!-- <mat-form-field class="full-width"  appearance = "outline">-->
+ <mat-form-field class="full-width"  appearance = "outline">
     <mat-label>Telefono</mat-label>
     <input required [(ngModel)] = "telefono" name = "telefono" matInput placeholder="Digite su telefono">
   </mat-form-field>
@@ -67,4 +87,4 @@
     <button mat-raised-button color="primary">Registrar</button>
     <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
   </div>
-</form> 
+</form> -->
