--- a/RemisYa/src/app/app.component.css
+++ b/RemisYa/src/app/app.component.css
@@ -1,3 +1,7 @@
 body {
     background: linear-gradient(90deg, rgb(1, 94, 21) 0%, rgb(0, 236, 20) 100%);
 }
+
+P {
+    background: linear-gradient(90deg, rgb(1, 94, 21) 0%, rgb(0, 236, 20) 100%);
+}
