--- a/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
+++ b/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
@@ -2,6 +2,9 @@
 
 <div  id= "iniciars" class="login">
   <div class="login-header">
+    <div class="container text-center">
+      <img src="../../../assets/log-in.png" width = "100" height = "100">
+    </div>
     <h1>Login</h1>
   </div>
   <div class="login-form">
