--- a/RemisYa/src/app/pages/tienda/tienda.component.html
+++ b/RemisYa/src/app/pages/tienda/tienda.component.html
@@ -71,7 +71,9 @@
                         </div>
                     </div>
                     <div class="mt-5"  width=100% height=100%>
-                        <button type="button" class="btn btn-primary">Comprar ahora</button>
+                        <a href="#iniciars">
+                            <button type="button" class="btn btn-primary">Comprar ahora</button>
+                        </a>
                     </div>       
         
                 </div>
