--- a/RemisYa/src/app/pages/registrarse/registrarse.component.html
+++ b/RemisYa/src/app/pages/registrarse/registrarse.component.html
@@ -9,36 +9,36 @@
         <h1 class="text-center">Registrate aqui</h1>
 
 
-        <form action="">
+        <form (ngSubmit) = "formSubmit()">
           <mat-form-field class="full-width"  appearance = "outline">
             <mat-label>Nombre de usuario</mat-label>
-            <input name = "username" matInput placeholder="Digite su nombre de usuario">
+            <input required [(ngModel)] = "user.username" name = "username" matInput placeholder="Digite su nombre de usuario">
             <mat-hint>El nombre de usuario debe ser único</mat-hint>
           </mat-form-field>
 
           <mat-form-field class="full-width"  appearance = "outline">
             <mat-label>Contraseña</mat-label>
-            <input name = "password" type = "password" matInput placeholder="Digite su contraseña">
+            <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Digite su contraseña">
           </mat-form-field>
 
           <mat-form-field class="full-width"  appearance = "outline">
             <mat-label>Nombre</mat-label>
-            <input name = "nombre" matInput placeholder="Digite su nombre">
+            <input required [(ngModel)] = "user.nombre" name = "nombre" matInput placeholder="Digite su nombre">
           </mat-form-field>
 
           <mat-form-field class="full-width"  appearance = "outline">
             <mat-label>Apellido</mat-label>
-            <input name = "apellido" matInput placeholder="Digite su apellido">
+            <input required [(ngModel)] = "user.apellido" name = "apellido" matInput placeholder="Digite su apellido">
           </mat-form-field>
 
           <mat-form-field class="full-width"  appearance = "outline">
             <mat-label>Email</mat-label>
-            <input name = "email" type="email" matInput placeholder="Digite su email">
+            <input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Digite su email">
           </mat-form-field>
 
           <mat-form-field class="full-width"  appearance = "outline">
             <mat-label>Telefono</mat-label>
-            <input  name = "telefono" matInput placeholder="Digite su telefono">
+            <input required [(ngModel)] = "user.telefono"  name = "telefono" matInput placeholder="Digite su telefono">
           </mat-form-field>
 
           <div class = "container text-center">
