--- a/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
+++ b/RemisYa/src/app/pages/iniciarsesion/iniciarsesion.component.html
@@ -8,7 +8,7 @@
     <h1>Login</h1>
   </div>
   <div class="login-form">
-    <h3>Username:</h3>
+    <h3>Nombre de usuario:</h3>
     <input type="text" placeholder="Username"/><br>
     <h3>Contraseña:</h3>
     <input type="password" placeholder="Password"/>
