Se actualiza front

--- a/RemisYa/src/app/layout/header/header.component.html
+++ b/RemisYa/src/app/layout/header/header.component.html
@@ -49,10 +49,16 @@
                             </div>
                           </div>
                     </div>
-                   <br>
-                    <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
+                   <div class="mt-5"  width=100% height=100%>
+                    <a href="#iniciars">
+                        <button type="button" class="btn btn-primary">Soliciar movil <i
+                          class="bi bi-arrow-right-circle"></i></button>
+                    </a>
+                   </div>   
+                   <!-- <a class="btn btn-lg btn-primary" href="RemisYa">Soliciar movil <i
                       class="bi bi-arrow-right-circle"></i></a>
-                    <br>
+                    <mat-hint>Movil solcitado pero con demoras, registrese para solicitar un movil sin demoras</mat-hint>
+                   --> <br>
                     <p>-</p>
                   <!--  <button onclick="alertar('Su coche ya está en camino');">
                         Pedir coche
